--- a/Service/index.html
+++ b/Service/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href=./css/success.css>
     <link rel="stylesheet" href=./css/testimonials.css>
     <link rel="stylesheet" href=./css/faq.css>
+    <link rel="stylesheet" href=./css/touch.css>
+    <link rel="stylesheet" href=./css/marquee.css>
+    <link rel="stylesheet" href=./css/footer.css>
 </head>
 <body>
 <header class="header container">
@@ -465,10 +468,9 @@
         </div>
     </div>
 <div class="faq container">
-
-
     <div class="faq-list">
-        <div class="faq-item">
+        <label for="faq1" class="faq-item">
+            <input id="faq1" type="checkbox" hidden/>
             <div class="faq-item-text">
                 <div class="faq-item-question">
                     <p>How long does it take to complete a web development project?</p>
@@ -480,7 +482,243 @@
             <div class="faq-icon">
                 <img src="./image/plus.svg"/>
             </div>
+            <div class="faq-icon2">
+                <img src="./image/minus.svg"/>
+            </div>
+        </label>
+        <label for="faq2" class="faq-item">
+            <input id="faq2" type="checkbox" hidden/>
+            <div class="faq-item-text">
+                <div class="faq-item-question">
+                    <p>Can you handle large-scale mobile app development projects?</p>
+                </div>
+                <div class="faq-item-answer">
+                    <p>The timeline varies depending on the project's complexity and requirements. Our team strives to deliver projects on time while maintaining the highest quality standards.</p>
+                </div>
+            </div>
+            <div class="faq-icon">
+                <img src="./image/plus.svg"/>
+            </div>
+            <div class="faq-icon2">
+                <img src="./image/minus.svg"/>
+            </div>
+        </label>
+        <label for="faq3" class="faq-item">
+            <input id="faq3" type="checkbox" hidden/>
+            <div class="faq-item-text">
+                <div class="faq-item-question">
+                    <p>Can you integrate third-party APIs into our mobile app?</p>
+                </div>
+                <div class="faq-item-answer">
+                    <p>The timeline varies depending on the project's complexity and requirements. Our team strives to deliver projects on time while maintaining the highest quality standards.</p>
+                </div>
+            </div>
+            <div class="faq-icon">
+                <img src="./image/plus.svg"/>
+            </div>
+            <div class="faq-icon2">
+                <img src="./image/minus.svg"/>
+            </div>
+        </label>
+        <label for="faq4" class="faq-item">
+            <input id="faq4" type="checkbox" hidden/>
+            <div class="faq-item-text">
+                <div class="faq-item-question">
+                    <p>How do you ensure cross-platform compatibility for mobile apps?</p>
+                </div>
+                <div class="faq-item-answer">
+                    <p>The timeline varies depending on the project's complexity and requirements. Our team strives to deliver projects on time while maintaining the highest quality standards.</p>
+                </div>
+            </div>
+            <div class="faq-icon">
+                <img src="./image/plus.svg"/>
+            </div>
+            <div class="faq-icon2">
+                <img src="./image/minus.svg"/>
+            </div>
+        </label>
+        <label for="faq5" class="faq-item">
+            <input id="faq5" type="checkbox" hidden/>
+            <div class="faq-item-text">
+                <div class="faq-item-question">
+                    <p>What is your approach to user experience (UX) design?</p>
+                </div>
+                <div class="faq-item-answer">
+                    <p>The timeline varies depending on the project's complexity and requirements. Our team strives to deliver projects on time while maintaining the highest quality standards.</p>
+                </div>
+            </div>
+            <div class="faq-icon">
+                <img src="./image/plus.svg"/>
+            </div>
+            <div class="faq-icon2">
+                <img src="./image/minus.svg"/>
+            </div>
+        </label>
+    </div>
+    <div class="faq-form">
+        <div class="faq-form-title">
+            <h3>Ask your question</h3>
         </div>
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input id="name" type="text" placeholder="Enter your name">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input id="email" type="email" placeholder="Enter your email">
+            </div>
+            <div class="form-group">
+                <label for="question">Your Question</label>
+                <textarea id="question" placeholder="Enter Your Question Here..." rows="7"></textarea>
+            </div>
+        </form>
+        <button class="btn">Send your message</button>
+    </div>
+</div>
+<div class="touch container">
+    <div class="touch-content">
+        <h2 class="touch-title">
+            Ready to Transform Your Digital Presence?
+        </h2>
+        <p class="touch-description">
+            Take the first step towards digital success with NexGen by your side. Our team of experts is eager to craft tailored solutions that drive growth for your business.
+        </p>
+    </div>
+        <button class="touch-btn">
+            <span>Get in Touch</span>
+            <img src="./image/Vectororange.svg"/>
+        </button>
+</div>
+<div class="marquee container">
+    <div class="marquee-content">
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+        <span class="dot">&#9679;</span>
+        <span class="marquee-text">Follow Us on Social Media</span>
+    </div>
+</div>
+<div class="footer container">
+    <div class="footer-left">
+        <div class="footer-left-item">
+            <div class="footer-item-header">
+                <div class="footer-item-header-social">
+                    <img src="./image/insta icon.svg"/>
+                </div>
+                <div class="arrow-top-right-icon">
+                    <img src="./image/Vectororange.svg"/>
+                </div>
+            </div>
+            <div class="footer-item-content">
+                <h3 class="footer-item-content-title">Instagram</h3>
+                <p class="footer-item-content-description">Share visually appealing snippets of our latest web projects.</p>
+            </div>
+        </div>
+        <div class="footer-left-item">
+            <div class="footer-item-header">
+                <div class="footer-item-header-social">
+                    <img src="./image/twitter icon.svg"/>
+                </div>
+                <div class="arrow-top-right-icon">
+                    <img src="./image/Vectororange.svg"/>
+                </div>
+            </div>
+            <div class="footer-item-content">
+                <h3 class="footer-item-content-title">Twitter</h3>
+                <p class="footer-item-content-description">Tweet about interesting coding challenges you've overcome.</p>
+            </div>
+        </div>
+        <div class="footer-left-item">
+            <div class="footer-item-header">
+                <div class="footer-item-header-social">
+                    <img src="./image/ball.svg"/>
+                </div>
+                <div class="arrow-top-right-icon">
+                    <img src="./image/Vectororange.svg"/>
+                </div>
+            </div>
+            <div class="footer-item-content">
+                <h3 class="footer-item-content-title">Dribbble</h3>
+                <p class="footer-item-content-description">Showcase design elements of our web projects.</p>
+            </div>
+        </div>
+        <div class="footer-left-item">
+            <div class="footer-item-header">
+                <div class="footer-item-header-social">
+                    <img src="./image/be.svg"/>
+                </div>
+                <div class="arrow-top-right-icon">
+                    <img src="./image/Vectororange.svg"/>
+                </div>
+            </div>
+            <div class="footer-item-content">
+                <h3 class="footer-item-content-title">Behance</h3>
+                <p class="footer-item-content-description">Create detailed presentations for our projects.</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer-right">
+        <div class="footer-right-menu">
+            <div class="footer-menu-item">
+            <div class="footer-menu-title">Home</div>
+            <div>
+                <ul class="footer-menu-list">
+                    <li>Why Us</li>
+                    <li>About Us</li>
+                    <li>Testimonials</li>
+                    <li>FAQ’s</li>
+                </ul>
+            </div>
+        </div>
+            <div class="footer-menu-item">
+                <div class="footer-menu-title">Home</div>
+                <div>
+                    <ul class="footer-menu-list">
+                        <li>Why Us</li>
+                        <li>About Us</li>
+                        <li>Testimonials</li>
+                        <li>FAQ’s</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-menu-item">
+                <div class="footer-menu-title">Home</div>
+                <div>
+                    <ul class="footer-menu-list">
+                        <li>Why Us</li>
+                        <li>About Us</li>
+                        <li>Testimonials</li>
+                        <li>FAQ’s</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-menu-item">
+                <div class="footer-menu-title">Home</div>
+                <div>
+                    <ul class="footer-menu-list">
+                        <li>Why Us</li>
+                        <li>About Us</li>
+                        <li>Testimonials</li>
+                        <li>FAQ’s</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-right-newsletter"></div>
+        <div class="footer-right-bottom"></div>
     </div>
 </div>
 </body>
