--- a/Service/index.html
+++ b/Service/index.html
@@ -684,35 +684,34 @@
             </div>
         </div>
             <div class="footer-menu-item">
-                <div class="footer-menu-title">Home</div>
+                <div class="footer-menu-title">Services</div>
                 <div>
                     <ul class="footer-menu-list">
-                        <li>Why Us</li>
-                        <li>About Us</li>
-                        <li>Testimonials</li>
-                        <li>FAQ’s</li>
+                        <li>Web Development</li>
+                        <li>App Development</li>
+                        <li>Web Design</li>
+                        <li>Digital Marketing</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-menu-item">
-                <div class="footer-menu-title">Home</div>
+                <div class="footer-menu-title">Projects</div>
                 <div>
                     <ul class="footer-menu-list">
-                        <li>Why Us</li>
-                        <li>About Us</li>
-                        <li>Testimonials</li>
-                        <li>FAQ’s</li>
+                        <li>Klothink</li>
+                        <li>Zenith</li>
+                        <li>Novus</li>
+                        <li>Apex</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-menu-item">
-                <div class="footer-menu-title">Home</div>
+                <div class="footer-menu-title">Blogs</div>
                 <div>
                     <ul class="footer-menu-list">
-                        <li>Why Us</li>
-                        <li>About Us</li>
-                        <li>Testimonials</li>
-                        <li>FAQ’s</li>
+                        <li>Business</li>
+                        <li>Design</li>
+                        <li>Development</li>
                     </ul>
                 </div>
             </div>
